Fixed stretch of footer img

--- a/index.css
+++ b/index.css
@@ -79,7 +79,9 @@ h2 {
 
 .footerIMG {
     width: 100%;
-    height: 35vh;
+    height: 50vh;
+    object-fit: cover;
+    
 }
 .imgICON {
     padding-top: 5rem;
